[package]
name = "deezer_to_spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
base64 = "0.21.3"
dotenv = "0.15.0"
loading = "0.3.0"
reqwest = { version = "0.11.20", features = ["json"] }
scanpw = "1.0.0"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
